# single-cell-input-standardizer

./: .gitignore  README.md  pyproject.toml
cases/: case_001_2021_olelekan_gse147082.yaml  case_002_2021_regner_gse173682.yaml  case_003_2020_tongton_gse130000.yaml  case_004_2021_hippen_gse158937.yaml  case_005_2020_geistlinger_gse154600.yaml  case_006_2022_junfen_gse184880.yaml  case_007_2023_guo_gse181955.yaml  case_008_2018_shih_gse118828.yaml  case_009_2022_zhang_gse165897.yaml  case_010_2022_ignacio_gse180661.yaml  case_011_2023_hippen_gse217517.yaml  case_012_2024_brand_gse233615.yaml  case_013_2021_li_gse168652.yaml  case_014_2022_shen_gse191301.yaml  case_015_2024_denisenko_gse211956.yaml  case_016_2025_pounds_gse281120.yaml  case_017_2022_loret_gse201047.yaml
config/: case_script_patterns.yaml  case_to_pattern_index.yaml
examples/: example_gene_by_cell_counts.csv
obsidian_cases/: case_001_geo_csv_count_tables.md  case_002_large_10x_mtx_archive.md  case_003_txt_count_tables_gene_mapping.md  case_004_10x_matrix_market_gene_dedup.md  case_005_10x_matrix_market_genes_table.md  case_006_cancer_only_dot_separated_10x.md  case_007_csv_count_table_ensembl_ids.md  case_008_csv_cell_by_gene_cellid.md  case_009_global_umi_matrix_cell_metadata.md  case_010_huge_h5ad_external_metadata.md  case_011_mixed_archive_per_sample_10x_plus_bulk.md  case_012_per_sample_10x_h5_gene_universe_difference.md  case_014_pre_post_nact_triplet_matching.md  case_015_denisenko_txt_counts_plus_spatial.md  case_016_pounds_global_csv_suffix_parser.md  case_017_loret_old_10x_h5_multisite.md
(+70 files in other folders)
